Particle edit does not render children (Cycles) even though Display/Children is being checked #61475

Closed
opened 2019-02-12 18:22:01 +01:00 by Olivier Lau · 13 comments

System Information
Operating system: Windows 10 64 bits
Graphics card: nvidia gtx

Blender Version
Broken: 2.80 036ec5cae4 2019.02.11

Particle edit does not render children (Cycles) even though Display/Children is being checked.
This used to work in 2.79. See attached screen and blend file (HairCard2 object has particle edits).

On a side note, I noticed that in particle edit mode, C circle select mode, middle mouse button was used to deselect (left mouse to select). This seems counter-intuitive, knowing Alt seems to be the modifier to deselect in 2.8 (i.e. Alt+A to deselect all). I think deselection behavior should be unified throughout the app.

particle_edit_no_children.jpg
hair_tex.zip

**System Information** Operating system: Windows 10 64 bits Graphics card: nvidia gtx **Blender Version** Broken: 2.80 036ec5cae4f7 2019.02.11 Particle edit does not render children (Cycles) even though Display/Children is being checked. This used to work in 2.79. See attached screen and blend file (HairCard2 object has particle edits). On a side note, I noticed that in particle edit mode, C circle select mode, middle mouse button was used to deselect (left mouse to select). This seems counter-intuitive, knowing Alt seems to be the modifier to deselect in 2.8 (i.e. Alt+A to deselect all). I think deselection behavior should be unified throughout the app. ![particle_edit_no_children.jpg](https://archive.blender.org/developer/F6592048/particle_edit_no_children.jpg) [hair_tex.zip](https://archive.blender.org/developer/F6592038/hair_tex.zip)
Author

Added subscriber: @ilio

Added subscriber: @ilio
Olivier Lau changed title from Particle edit do not render children (Cycles) even though Display/Children is being checked to Particle edit does not render children (Cycles) even though Display/Children is being checked 2019-02-12 18:24:16 +01:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can't seem to get the child hairs to display in 2.79, latest build from here: https://builder.blender.org/download/

Am I missing something or is this the case with the latest 2.79 build for you as well?

I can't seem to get the child hairs to display in 2.79, latest build from here: https://builder.blender.org/download/ Am I missing something or is this the case with the latest 2.79 build for you as well?
Author

I was following a video tutorial using 2.79 and child hair is displaying in the video, this is why I said this used to work in previous version. I can send you a screen (need email) but not publicly as the video is not public. I didn't try myself in 2.79 though, I was assuming it was working since I saw that in the video.

I was following a video tutorial using 2.79 and child hair is displaying in the video, this is why I said this used to work in previous version. I can send you a screen (need email) but not publicly as the video is not public. I didn't try myself in 2.79 though, I was assuming it was working since I saw that in the video.

Can you try to reproduce this in both 2.79b and the latest 2.79 build then and get back to me?

Can you try to reproduce this in both 2.79b and the latest 2.79 build then and get back to me?
Author

Ok so I made a few more testing, let me clarify because the initial statement was not totally right. I managed to have children visible in 2.79b in particle edit mode but we need to opt out of Clycles in viewport (SHIFT+Z). However, in 2.8, SHIFT+Z is just changing the shading type and I didn't find a way to see children being displayed in particle edit more regardless of the shading type chosen. Please check this with the file I attached, if you find a way to display children in particle edit mode please let me know how.

Ok so I made a few more testing, let me clarify because the initial statement was not totally right. I managed to have children visible in 2.79b in particle edit mode but we need to opt out of Clycles in viewport (SHIFT+Z). However, in 2.8, SHIFT+Z is just changing the shading type and I didn't find a way to see children being displayed in particle edit more regardless of the shading type chosen. Please check this with the file I attached, if you find a way to display children in particle edit mode please let me know how.

Can you simply give me a 2.79 file where you can see the children in particle edit mode?

Can you simply give me a 2.79 file where you can see the children in particle edit mode?
Author

Here it is : hair_2.79b.blend.zip

I tried a new project from scratch in 2.8 and can see children in particle edit mode, but still not with the 2.8 file I attached originally. So there must be something I did that broke it, I'll try to repeat the steps and see. I'll update if I can find anything.

Here it is : [hair_2.79b.blend.zip](https://archive.blender.org/developer/F6599746/hair_2.79b.blend.zip) I tried a new project from scratch in 2.8 and can see children in particle edit mode, but still not with the 2.8 file I attached originally. So there must be something I did that broke it, I'll try to repeat the steps and see. I'll update if I can find anything.
Clément Foucault was assigned by Sebastian Parborg 2019-02-13 15:34:17 +01:00

Added subscriber: @fclem

Added subscriber: @fclem

The reason seems to be that the children become invisible with Path steps set to 8 or more.

If you set them to less than 8, they do display but they do not seem to be subdivided as they should with the steps parameter:

2.79:
hair2.png
2.8:
hair1.png
blend file:
hair_279.blend

@fclem feel free to reassign if this is not for you. I'm guessing this is render related (?)

The reason seems to be that the children become invisible with `Path steps` set to 8 or more. If you set them to less than 8, they do display but they do not seem to be subdivided as they should with the steps parameter: 2.79: ![hair2.png](https://archive.blender.org/developer/F6599904/hair2.png) 2.8: ![hair1.png](https://archive.blender.org/developer/F6599903/hair1.png) blend file: [hair_279.blend](https://archive.blender.org/developer/F6599911/hair_279.blend) @fclem feel free to reassign if this is not for you. I'm guessing this is render related (?)
Author

Thanks @ZedDB, I confirm that moving Path Step to a value lower than 8 in particle edit properties/Display section enables to see children whereas a value of 8 or above hides them.

Thanks @ZedDB, I confirm that moving Path Step to a value lower than 8 in particle edit properties/Display section enables to see children whereas a value of 8 or above hides them.

This issue was referenced by e72dc667c4

This issue was referenced by e72dc667c4d3ef0b4a4c306dd6b12cae9d37287b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61475
No description provided.